--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,10 +4,12 @@
     margin: 0;
 }
 
+
 body {
     background-color: #d9dcd6;
 }
 
+/* Stylise header */
 .header {
     padding: 20px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
@@ -20,10 +22,11 @@ body {
     font-size: 48px;
 }
 
+/* different color text for the page header*/
 .header h1 .seo {
     color: #d9dcd6;
 }
-
+/* Format for the navagation bar */
 .header nav {
     padding-top: 15px;
     margin-right: 20px;
@@ -128,6 +131,7 @@ p {
     font-size: 36px;
 }
 
+/* Stylise footer */
 .footer {
     padding: 30px;
     clear: both;
